[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/DefenderArea.gd" type="Script" id=1]
[ext_resource path="res://Scenes/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Ships/ship_001.tex" type="Texture" id=3]
[ext_resource path="res://Scenes/DefenderSprite.gd" type="Script" id=4]
[ext_resource path="res://Graphics/Ships/ship_001_shield.tex" type="Texture" id=5]
[ext_resource path="res://Scripts/check.gd" type="Script" id=6]
[ext_resource path="res://Raw Graphics/Projectiles/bullet_004.png" type="Texture" id=7]
[ext_resource path="res://Scenes/ColorPicker.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 32.1378 )

[sub_resource type="GDScript" id=2]

script/source = "extends Area2D


var clicked = false
var toggled = 0

func _ready():
	connect(\"mouse_entered\", get_node(\"/root/Main\"), \"_on_Area2D_mouse_enter\")
	connect(\"mouse_exited\", get_node(\"/root/Main\"), \"_on_Area2D_mouse_exit\")
	connect(\"input_event\", self, \"_input_event\")

func _input_event( viewport, event, shape_idx ):
	if event is InputEventMouseButton:
		if event.button_index == BUTTON_LEFT:
			if event.pressed && toggled < 1:
				#tell Main that we are \"hovering\" so we don't create anything while placing this
				get_node(\"/root/Main\").overButtonLock = true
				get_node(\"/root/Main\").set_hovering(true)
				clicked = true
				print(\"true\")
			elif !event.pressed:
				#tell Main that we are done hovering
				get_node(\"/root/Main\").overButtonLock = false
				get_node(\"/root/Main\").set_hovering(false)
				clicked = false
			toggled = toggled + 1
	else:
		toggled = 0"

[sub_resource type="GDScript" id=3]

script/source = "extends Sprite


var clickable = false

func _ready():
	set_process(true)
	
func _process(delta):
	if get_parent().clicked:
		self.global_position = self.get_global_mouse_position()

"

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 2179.45, 9.15778 )

[sub_resource type="GDScript" id=5]

script/source = "extends CollisionShape2D


func _ready():
	set_process(true)
	
func _process(delta):
	self.global_position = get_parent().get_child(0).global_position
"

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 43.9636, 37.7185 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 17.1479, 9.05286 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 150, 230 )

[node name="DefenderArea" type="Area2D"]

position = Vector2( -132.09, -1432.12 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Defender" type="Node2D" parent="." index="0"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="Defender" index="0"]

position = Vector2( -0.00369263, 7.00464 )
scale = Vector2( 1.68406, 1.2189 )
input_pickable = false
collision_layer = 24
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Transform", "Visibility", "Z Index", "collision" ]

[node name="DefenderSprite" type="Sprite" parent="Defender/KinematicBody2D" index="0"]

position = Vector2( 0.00219125, -5.74672 )
rotation = 3.14159
scale = Vector2( 0.593804, 0.820415 )
texture = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="DefenderShield" type="Sprite" parent="Defender/KinematicBody2D" index="1"]

position = Vector2( 0.00219124, 18.8657 )
rotation = 3.14159
scale = Vector2( 0.593804, 0.820415 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D" type="StaticBody2D" parent="Defender/KinematicBody2D" index="2"]

position = Vector2( 0.182007, 1.82967 )
scale = Vector2( 0.81418, 0.925585 )
input_pickable = false
collision_layer = 24
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Defender/KinematicBody2D/StaticBody2D" index="0"]

position = Vector2( -0.288285, 14.5665 )
scale = Vector2( 2.45045, 0.604477 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Defender" index="1"]

editor/display_folded = true
visible = false
position = Vector2( 14.7581, -144.612 )
scale = Vector2( 1.7382, 0.809096 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 2 )

[node name="topBoundary" type="Sprite" parent="Defender/Area2D" index="0"]

position = Vector2( 40.6006, 39.5764 )
scale = Vector2( 664.151, 2.9 )
texture = ExtResource( 7 )
script = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Defender/Area2D" index="1"]

position = Vector2( -159.806, 39.4341 )
scale = Vector2( 1.38945, 2 )
shape = SubResource( 4 )
script = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D2" type="Area2D" parent="Defender" index="2"]

editor/display_folded = true
visible = false
position = Vector2( 702.235, -120.805 )
rotation = 1.5708
scale = Vector2( 1.7382, 0.809096 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="rightBoundary" type="Sprite" parent="Defender/Area2D2" index="0"]

position = Vector2( 36.7758, 39.5764 )
scale = Vector2( 664.151, 2.9 )
texture = ExtResource( 7 )
script = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Defender/Area2D2" index="1"]

position = Vector2( -159.806, 39.4341 )
scale = Vector2( 1.38945, 2 )
shape = SubResource( 4 )
script = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D3" type="Area2D" parent="Defender" index="3"]

editor/display_folded = true
visible = false
position = Vector2( 618.957, 317.792 )
rotation = 3.14159
scale = Vector2( 1.7382, 0.809096 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="bottomBoundary" type="Sprite" parent="Defender/Area2D3" index="0"]

position = Vector2( 36.7758, 39.5764 )
scale = Vector2( 664.151, 2.9 )
texture = ExtResource( 7 )
script = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Defender/Area2D3" index="1"]

position = Vector2( -159.806, 39.4341 )
scale = Vector2( 1.38945, 2 )
shape = SubResource( 4 )
script = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D4" type="Area2D" parent="Defender" index="4"]

editor/display_folded = true
visible = false
position = Vector2( -408.137, 365.908 )
rotation = 1.5708
scale = Vector2( 1.7382, 0.809096 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="leftBoundary" type="Sprite" parent="Defender/Area2D4" index="0"]

position = Vector2( 36.7758, 39.5764 )
scale = Vector2( 664.151, 2.9 )
texture = ExtResource( 7 )
script = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Defender/Area2D4" index="1"]

position = Vector2( -159.806, 39.4341 )
scale = Vector2( 1.38945, 2 )
shape = SubResource( 4 )
script = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.814514, 8.14502 )
shape = SubResource( 6 )

[node name="DefenderMenu" type="Area2D" parent="." index="2"]

visible = false
position = Vector2( 19.2055, -76.2926 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="StatsVBox" type="VBoxContainer" parent="DefenderMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 46.0
margin_right = 214.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="FireRateHBox" type="HBoxContainer" parent="DefenderMenu/StatsVBox" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = -4.0
margin_right = 150.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="FireRateButton" type="MenuButton" parent="DefenderMenu/StatsVBox/FireRateHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "FireRate"
flat = true
align = 1
items = [  ]

[node name="FireRateSpinBox" type="SpinBox" parent="DefenderMenu/StatsVBox/FireRateHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_right = 142.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="SpeedHBox" type="HBoxContainer" parent="DefenderMenu/StatsVBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 129.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="SpeedButton" type="MenuButton" parent="DefenderMenu/StatsVBox/SpeedHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 51.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Speed"
flat = true
align = 1
items = [  ]

[node name="SpeedSpinBox" type="SpinBox" parent="DefenderMenu/StatsVBox/SpeedHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_right = 129.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100.0
step = 0.1
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="VisualVBox" type="VBoxContainer" parent="DefenderMenu" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 179.0
margin_top = 42.0
margin_right = 311.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HeightHBox" type="HBoxContainer" parent="DefenderMenu/VisualVBox" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HeightButton" type="MenuButton" parent="DefenderMenu/VisualVBox/HeightHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 54.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Height"
flat = true
align = 1
items = [  ]

[node name="HeightSpinBox" type="SpinBox" parent="DefenderMenu/VisualVBox/HeightHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100000.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="WidthHBox" type="HBoxContainer" parent="DefenderMenu/VisualVBox" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="WidthButton" type="MenuButton" parent="DefenderMenu/VisualVBox/WidthHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Width"
flat = true
align = 1
items = [  ]

[node name="WidthSpinBox" type="SpinBox" parent="DefenderMenu/VisualVBox/WidthHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100000.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefenderMenu" index="2"]

position = Vector2( 201.41, 86.9741 )
scale = Vector2( 9.57334, 6.62774 )
shape = SubResource( 7 )

[node name="ColorPickerArea2D" type="Area2D" parent="DefenderMenu" index="3"]

visible = false
position = Vector2( 380.794, -63.7074 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="ColorPicker" type="ColorPicker" parent="DefenderMenu/ColorPickerArea2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0
color = Color( 1, 1, 1, 1 )
edit_alpha = true
raw_mode = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefenderMenu/ColorPickerArea2D" index="1"]

position = Vector2( 150, 230 )
shape = SubResource( 8 )

[node name="ColorPicker" type="ColorPickerButton" parent="DefenderMenu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_top = 117.0
margin_right = 306.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 0.574219, 0.325241, 0.325241, 1 )
edit_alpha = false
script = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]

[connection signal="mouse_entered" from="." to="." method="_on_DefenderArea2D_mouse_enter"]

[connection signal="mouse_exited" from="." to="." method="_on_DefenderArea2D_mouse_exit"]

[connection signal="color_changed" from="DefenderMenu/ColorPickerArea2D/ColorPicker" to="Defender/KinematicBody2D/DefenderSprite" method="_on_ColorPicker_color_changed"]

[connection signal="color_changed" from="DefenderMenu/ColorPickerArea2D/ColorPicker" to="DefenderMenu/ColorPicker" method="_on_ColorPicker_color_changed"]

[connection signal="pressed" from="DefenderMenu/ColorPicker" to="DefenderMenu/ColorPicker" method="_on_ColorPicker_pressed"]


